--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<!DOCTPE HTML>
+<!DOCTYPE HTML>
 <HTML>
     <head>
       <title>GIt</title>
     </head>
     <body>
       <h1>Belajar Git</h1>
+      <p>Git Push</p>
     </body>
 </HTML>
