menambahkan subheading dan paragraf baru

--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
     <body>
       <h1>Belajar Git</h1>
       <p>Git Push</p>
+      <h2>materi git hub</h2>
+        <p>melakukan  git init untuk memasukan working repository kita ke git</p>
+        
     </body>
 </HTML>
